[package]
name = "drophost"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A simple drop-in based /etc/hosts manager"
readme = "readme.md"
authors = ["Kodi Craft <kodi@kdcf.me>"]
repository = "https://github.com/KodiCraft/drophost"
keywords = ["hosts", "drop-in", "dns", "networking"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
nix = "0.28.0"
oping = { version = "0.4.0", optional = true }
iprange = { version = "0.6.7", optional = true }
network-interface = { version = "1.1.2", optional = true }
ipnet = { version = "2.9.0", optional = true }
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
notify = "6.1.1"
once_cell = "1.19.0"
env_logger = "0.10.2"
backtrace = { version = "0.3.71", optional = true, features = ["std"] }

[features]
default = []
ping = ["dep:oping"]
range = ["dep:iprange", "dep:network-interface", "dep:ipnet"]
interface = ["dep:network-interface"]
backtrace = ["dep:backtrace"]