[package]
name = "drophost"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A simple drop-in based /etc/hosts manager"
readme = "readme.md"
authors = ["Kodi Craft <kodi@kdcf.me>"]
repository = "https://github.com/KodiCraft/drophost"
keywords = ["hosts", "drop-in", "dns", "networking"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.25"
nix = "0.29.0"
oping = { version = "0.4.0", optional = true }
iprange = { version = "0.6.7", optional = true }
network-interface = { version = "2.0.0", optional = true }
ipnet = { version = "2.11.0", optional = true }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }
notify = "8.0.0"
once_cell = "1.20.3"
env_logger = "0.11.6"
backtrace = { version = "0.3.74", optional = true, features = ["std"] }

[features]
default = []
ping = ["dep:oping"]
range = ["dep:iprange", "dep:network-interface", "dep:ipnet"]
interface = ["dep:network-interface"]
backtrace = ["dep:backtrace"]